# storage

./: .gitignore  CLOUDFLARE_SETUP.md  Office C2R.csv  Office For Mac.csv  Office MSI VL.csv  backend_fresh_deploy.txt  backend_fresh_deploy_out.txt  index.html
backend/: .env  Cargo.toml  README.md  backend_deploy_no_inc.txt  build_errors.txt  build_errors_2.txt  build_errors_3.txt  cargo_install_err.txt  deploy_errors.txt  final_deploy_rust.txt  worker-proxy.js  wrangler.proxy.toml  wrangler.toml
backend/.wrangler/cache/: wrangler-account.json
backend/migrations/: 0000_init_office.sql  0001_office_ext_and_tokens.sql  0002_unified_products_schema.sql
backend/scripts/: import_office.js  import_office.sql  import_office_c2r.js  import_windows.js  import_windows.sql
backend/src/: lib.rs
backend/src/data/: mod.rs  navigation.rs  news.rs  office.rs  software.rs
backend/src/routes/: catalog.rs  download.rs  drivers.rs  links.rs  mod.rs  pages.rs
backend/target_new/: .rustc_info.json
backend/target_new/release/.fingerprint/adler2-ff7ca679628cb698/: lib-adler2  lib-adler2.json
backend/target_new/release/.fingerprint/aho-corasick-b3331835598b3d72/: lib-aho_corasick  lib-aho_corasick.json
backend/target_new/release/.fingerprint/alloc-no-stdlib-e52348ea7165e9f1/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
backend/target_new/release/.fingerprint/alloc-stdlib-616b8a207d372623/: lib-alloc_stdlib  lib-alloc_stdlib.json
backend/target_new/release/.fingerprint/heck-b47c94fd2a7e00cb/: lib-heck
backend/target_new/wasm32-unknown-unknown/release/: huynhtu_backend.d
(+613 files in other folders)
