[package]
name = "huynhtu-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
urlencoding = "2.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"    # optimize for size
lto = true
